# matrix-livekit-assistant

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml
ai-agent/: Dockerfile  agent.py  pyproject.toml
livekit/: livekit.yaml
livekit-jwt-service/: Dockerfile  pyproject.toml  server.py
stt-service/: Dockerfile  pyproject.toml  server.py  whisper_online.py
synapse/: Dockerfile  homeserver.template.yaml  render_and_start.py
tts-service/: README.md
