[project]
name = "livekit-jwt-service"
version = "0.1.0"
description = "Matrix-to-LiveKit JWT token bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "httpx==0.26.0",
    "livekit-api==1.1.0",
    "python-dotenv==1.0.1",
]

[tool.uv]
dev-dependencies = []
