[project]
name = "stt-service"
version = "0.1.0"
description = "Real-time streaming STT service using Faster-Whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "faster-whisper>=1.1.0",
    "av>=12.0.0",
    "numpy==1.26.3",
    "websockets==12.0",
    "python-dotenv==1.0.1",
    "librosa",
    "soundfile",
]

[tool.uv]
dev-dependencies = []
